# shixun

./: README.md
Cntroller/exhx5/: CHANGELOG.rst  CMakeLists.txt  package.xml
Cntroller/exhx5_balance_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
Cntroller/exhx5_balance_control/include/exhx5_balance_control/: exhx5_balance_control.h
Cntroller/exhx5_balance_control/src/: exhx5_balance_control.cpp
Cntroller/exhx5_gui_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
Cntroller/exhx5_gui_demo/config/: gui_config.yaml  init_pose.yaml  init_pose_gold_1028.yaml
Cntroller/exhx5_gui_demo/launch/: exhx5_demo.launch
Cntroller/exhx5_kinematics_dynamics/: CHANGELOG.rst  CMakeLists.txt  package.xml
Cntroller/exhx5_kinematics_dynamics/include/exhx5_kinematics_dynamics/: exhx5_kinematics_dynamics.h  exhx5_kinematics_dynamics_define.h
Cntroller/exhx5_kinematics_dynamics/src/: exhx5_kinematics_dynamics.cpp  link_data.cpp
Cntroller/exhx5_manager/: CMakeLists.txt  package.xml
Cntroller/exhx5_manager/config/: dxl_init.yaml  exhx5_w_c.robot  ini_pose_exhx5_w_c.yaml  offset_gazebo.yaml
Cntroller/exhx5_manager/launch/: exhx5_gazebo.launch  exhx5_gazebo_73cm.launch  exhx5_gazebo_exhx5_5.launch  exhx5_gazebo_exhx5_w_c.launch  exhx5_gazebo_exhx5_wing_1.launch  exhx5_gazebo_exhx5_wing_1_2.launch  exhx5_gazebo_exhx5_wing_5.launch  exhx5_gazebo_p5.launch  exhx5_gazebo_wheel.launch  exhx5_gazebo_wheel_6.launch  exhx5_gazebo_x5_p5.launch  exhx5_manager.launch  exhx5_manager_SCS0009.launch  exhx5_manager_SM40BL.launch  exhx5_manager_SM40BL_XL320.launch  exhx5_manager_left_time_based.launch  exhx5_manager_xl320.launch
Cntroller/exhx5_manager/src/: exhx5_manager.cpp
Cntroller/exhx5_online_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
Cntroller/exhx5_online_walking_module/config/: walking_parm.yaml
Cntroller/exhx5_online_walking_module/src/: exhx5_kdl.cpp  joint_control.cpp  online_walking_module.cpp  walking_control.cpp  wholebody_control.cpp
Cntroller/exhx5_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
Cntroller/exhx5_walking_module/config/: param.1.yaml  param.yaml  param_1030.yaml  param_1112backup.yaml  param_A_wheel.yaml  param_WHEEL_3_SIM.yaml  param_WHEEL_SIM.yaml  param_back.yaml  param_gold.yaml  param_gold_1024.yaml  param_left_right_only_1121.yaml  param_p3_1120.yaml  param_p5.yaml  param_wheel_5.yaml  param_wheel_6.yaml  param_wing_6_with exisitng kinematics.yaml
Cntroller/exhx5_walking_module/include/exhx5_walking_module/: exhx5_walking_module.h  exhx5_walking_parameter.h
Cntroller/exhx5_walking_module/src/: exhx5_walking_module.cpp
Cntroller/rl_controller/: AIDA_MHC.py  AIDA_env.py  ActorNetwork.py  CriticNetwork.py  Multi_Head_DDPG.py  const.py  min_jerk.py  replay_buffer.py  robot_state.py  rotation.py
Cntroller/rl_controller/log/: min_jerk_plan.txt  zmp_plan.txt
Env/exhx5_common/: CMakeLists.txt  package.xml
Env/exhx5_description/: CMakeLists.txt  package.xml
Env/exhx5_description/launch/: exhx5_display.launch  exhx5_rviz.launch
Env/exhx5_description/meshes/: head_pan_link.STL  head_tilt_link.STL  l_ank_pitch_link.STL  l_ank_roll_link.STL  l_hip_pitch_link.STL  l_hip_roll_link.STL  l_hip_yaw_link.STL  l_knee_link.STL  neck_pitch_link.STL  r_ank_pitch_link.STL  r_ank_roll_link.STL  r_hip_pitch_link.STL  r_hip_roll_link.STL  r_hip_yaw_link.STL  r_knee_link.STL
Env/exhx5_description/rviz/: exhx5.robot
Env/exhx5_description/urdf/: exhx5.csv  exhx5.gv  exhx5.urdf  exhx5.urdf.xacro  exhx5_1.urdf  exhx5_2.urdf  exhx5_backup.urdf  exhx5_demo.urdf  exhx5_gazebo.xacro  exhx5_processed.urdf  exhx5_processed_1.urdf  exhx5_processed_exhx5.urdf  exhx5_processed_op.urdf  exhx5_processed_op_2.urdf
Env/exhx5_gazebo/: CMakeLists.txt  package.xml  setup.py
Env/exhx5_gazebo/config/: exhx5_control.yaml  position_controlle_exhx5_4_small.yaml  position_controller _1.yaml  position_controller.yaml  position_controller_exhx5_model.yaml  position_controller_exhx5_w_b_2.yaml  position_controller_exhx5_w_c.yaml  position_controller_op.yaml
Env/exhx5_gazebo/launch/: exhx5_manager.launch  op3_manager.launch  position_controller.launch  position_controller_exhx5_4_small.launch  position_controller_exhx5_model.launch  position_controller_exhx5_w_b.launch  position_controller_exhx5_w_b_11.launch  position_controller_exhx5_w_b_6.launch  position_controller_exhx5_w_c.launch  position_controller_op.launch  robotis_world.launch  robotis_world_exhx5_110cm.launch  robotis_world_exhx5_4_small.launch  robotis_world_exhx5_model.launch  (+7 more)
Env/exhx5_w_b_4/: CMakeLists.txt  package.xml
(+40 files in other folders)
