<?xml version="1.0"?>
<package format="2">
  <name>exhx5_balance_control</name>
  <version>0.2.1</version>
  <description>
    The exhx5_balance_control package
  </description>
  <license>Apache 2.0</license>
  <author email="dm@todo.com">todo</author>
  <maintainer email="dm@todo.com">todo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>
</package>
